transform-origin should not accept 4 lengths https://bugs.webkit.org/show_bug.cgi?id=186965

transform-origin accepts 1, 2, or 3 values per the spec below.
https://drafts.csswg.org/css-transforms/#propdef-transform-origin

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-transforms/parsing/transform-origin-invalid-expected.txt:

Source/WebCore:

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeTransformOrigin):


Canonical link: https://commits.webkit.org/241622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282359 268f45cc-cd09-0410-ab3c-d52691b4dbfc